# Gyre

./: .gitignore  Cargo.toml  LICENSE  README.md  README_RU.md  README_ZH.md  config.example.toml
.github/workflows/: rust.yml
crates/acp/: Cargo.toml
crates/acp/src/: adapter.rs  http.rs  lib.rs  rpc.rs  stdio.rs  types.rs
crates/agent/: Cargo.toml
crates/agent/src/: harmony.rs  lib.rs  task_tool.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  pattern.rs  summary.rs
crates/cli/: Cargo.toml
crates/cli/src/: agents_view.rs  main.rs  markdown.rs  repl.rs
crates/collab/: Cargo.toml
crates/collab/src/: codec.rs  error.rs  frame.rs  lib.rs  relay.rs  room.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  env.rs  lib.rs  rules.rs
crates/context/: Cargo.toml
crates/context/src/: compaction.rs  lib.rs  persistence.rs  token.rs  tree.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  error.rs  hook.rs  lib.rs  llm.rs  memory.rs  message.rs  model.rs  platform.rs  resource.rs  skill.rs  tool.rs  workspace.rs  write_effect.rs
crates/hashline/: Cargo.toml
crates/hashline/src/: apply.rs  format.rs  lib.rs  mismatch.rs  normalize.rs  parser.rs  preview.rs  recovery.rs  repair.rs  snapshots.rs  tool.rs  types.rs
crates/i18n/: Cargo.toml
crates/i18n/locales/: en.json  ja.json  ru.json  zh.json
crates/i18n/src/: lib.rs
crates/iso/: Cargo.toml
crates/iso/src/: diff.rs  lib.rs  rcopy.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  deepseek.rs  dialect.rs  glm.rs  inband.rs  lib.rs  openai.rs  plugin.rs  registry.rs  thinking.rs  transform.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  detect.rs  diagnostics_ledger.rs  lib.rs  manager.rs  transport.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  lib.rs  tool.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  store.rs  structured.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: lib.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs  session.rs  tool.rs
crates/search/: Cargo.toml
crates/search/src/: extras.rs  fs_cache.rs  lib.rs  tokens.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/examples/: verify_skills.rs
crates/skills/src/: frontmatter.rs  lib.rs  native.rs  registry.rs  render.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs  model.rs  registry.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: dag.rs  executor.rs  lib.rs  pipeline.rs  render.rs  schema.rs  state.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: ast_tool.rs  diff_tool.rs  fs.rs  fuzzy_match.rs  github.rs  image.rs  lib.rs  list_tool.rs  lsp_tool.rs  lsp_write_effect.rs  search.rs  shell.rs  write.rs
docs/: agent-loop-improvement-plan.md
prompts/: compaction-summary.md  system-architect.md  system-ask.md  system-code.md  system-debug.md
web/: index.html
web/assets/: index-B1GzrXLw.js  index-DYwvJn-o.css  index-EpZqmc7X.css  index-Oy6Dp53K.js  index-PI-nVS_m.js  index-UL1jtC-R.css  index-lP8zUWo1.js
web/c5-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
web/c5-ui/src/: App.tsx  index.css  main.tsx  types.ts
web/c5-ui/src/components/: Toaster.tsx  charts.tsx  icons.tsx  ui.tsx
web/c5-ui/src/components/agent/: AgentShell.tsx  BranchTreeModal.tsx  Composer.tsx  Inspector.tsx  SessionList.tsx  SettingsPanel.tsx  Sidebar.tsx  SubAgentMonitor.tsx  Transcript.tsx  WorkspacePanel.tsx
web/c5-ui/src/lib/: cn.ts  format.ts  i18n.tsx  locales.ts  notifications.tsx  settings.tsx  theme.tsx
web/c5-ui/src/lib/agent/: commands.ts  highlight.ts  markdown.tsx  types.ts  ui.ts  useAgentSession.tsx  workspace.ts
