[package]
name        = "agent-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent Client Protocol (ACP) server: standard protocol for agent runtime ↔ client communication"

[dependencies]
agent-core   = { workspace = true }
agent-server = { workspace = true }
tokio        = { workspace = true }
futures      = { workspace = true }
async-stream = { workspace = true }
axum         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
