[package]
name        = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent CLI binary — assembles all adapters and drives the agent loop"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-core   = { workspace = true }
agent        = { workspace = true }
agent-supervisor = { workspace = true }
agent-config = { workspace = true }
agent-i18n   = { workspace = true }
agent-llm    = { workspace = true }
agent-context = { workspace = true }
agent-tools  = { workspace = true }
agent-prompt = { workspace = true }
agent-skills = { workspace = true }
agent-mcp    = { workspace = true }
agent-memory = { workspace = true }
agent-search = { workspace = true }
agent-server = { workspace = true }
agent-acp    = { workspace = true }
agent-telemetry = { workspace = true }
agent-hashline = { workspace = true }
agent-pty    = { workspace = true }
agent-collab = { workspace = true }
agent-swarm  = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
serde_json   = { workspace = true }
axum         = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
secrecy      = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline    = { workspace = true }
arboard      = { workspace = true }
image        = { workspace = true }
base64       = { workspace = true }

[lints]
workspace = true
