[package]
name        = "agent-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Layered TOML config: model profiles + agent approval rules engine"

[dependencies]
agent-core  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
glob        = { workspace = true }
dirs        = { workspace = true }
secrecy     = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }

[lints]
workspace = true
