[package]
name        = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent core contracts: shared types, traits, and error types (zero business deps)"

[dependencies]
agent-iso   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
dirs        = { workspace = true }

[lints]
workspace = true
