[package]
name = "agent-hashline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hashline 行锚定差分：[path#hash] 段头 + SWAP/DEL/INS 行操作（移植 oh-my-pi hashline）。"

[lints]
workspace = true

[dependencies]
agent-core.workspace = true
agent-tools.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
