[package]
name        = "agent-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Compile-time embedded message catalog + system locale detection for the agent CLI"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }

[lints]
workspace = true
