[package]
name = "agent-iso"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
similar.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
