[package]
name        = "agent-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LlmProvider adapters + ProviderRegistry (OpenAI-compatible streaming)"

[dependencies]
agent-core   = { workspace = true }
reqwest      = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
async-trait  = { workspace = true }
async-stream = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
inventory    = { workspace = true }

[lints]
workspace = true
