[package]
name        = "agent-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) stdio client + tool bridge"

[dependencies]
agent-core   = { workspace = true }
agent-tools  = { workspace = true }
agent-config = { workspace = true }
tokio        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
