[package]
name = "agent-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PTY 交互式 Shell：portable-pty 跨平台（ConPTY / posix），让 top/vim 等 TTY 依赖命令可运行。"

[lints]
workspace = true

[dependencies]
agent-core.workspace = true
agent-tools.workspace = true
async-trait.workspace = true
portable-pty.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
