[package]
name        = "agent-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "File-backed skill discovery, registry, and skill:// URL resolution"

[dependencies]
agent-core  = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
glob        = { workspace = true }
dirs        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
