[package]
name        = "agent-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenTelemetry tracing bridge + initialization"

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
