[package]
name        = "agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tool trait, ToolRegistry, and built-in fs/shell tools"

[dependencies]
agent-core   = { workspace = true }
agent-search = { workspace = true }
agent-lsp    = { workspace = true }
reqwest      = { workspace = true }
agent-ast    = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
base64       = { workspace = true }

[lints]
workspace = true
